build with docker and postgress